# synapsegenie

./: CONTRIBUTING.md  README.md  requirements.txt  setup.cfg  setup.py
.github/workflows/: pythonapp.yml
example_registry/: __init__.py  csv.py  validator.py
genie/: __init__.py  __main__.py  input_to_database.py  validate.py
synapsegenie/: __init__.py  __main__.py  bootstrap.py  config.py  example_filetype_format.py  input_to_database.py  process.py  process_functions.py  validate.py  write_invalid_reasons.py
tests/: test_cli.py  test_input_to_database.py  test_process_functions.py  test_validate.py  test_write_invalid_reasons.py
