[metadata]
name = synapsegenie
version = attr: synapsegenie.__version__
description = Synapse ETL framework
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Sage-Bionetworks/synapsegenie
author = Thomas Yu
author_email = thomas.yu@sagebionetworks.org
license = MIT
license_file = LICENSE
platforms = any
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering
project_urls =
    Bug Tracker = https://github.com/Sage-Bionetworks/synapsegenie/issues
    Source Code = https://github.com/Sage-Bionetworks/synapsegenie

[options]
packages = find:
install_requires =
    synapseclient>=2.6.0
    pandas>=1.0
python_requires = >=3.7, <=3.10
include_package_data = True
zip_safe = False


[options.entry_points]
console_scripts =
    genie = synapsegenie.__main__:main

[flake8]
max-line-length = 88
ignore =
    # space before : (needed for how black formats slicing)
    E203
